<resources>
    <string name="app_name">CropDroid</string>
    <string name="action_workflows">Workflows</string>
    <string name="action_settings">Settings</string>
    <string name="room_fragment">Room</string>
    <string name="reservoir_fragment">Reservoir</string>
    <string name="doser_fragment">Doser</string>
    <string name="events_fragment">Events</string>
    <string name="disabled">Disabled</string>
    <string name="nodata">No data</string>
    <string name="minutes">Minutes</string>
    <string name="empty_users">Oh no, you\'ve deleted all your users. Disaster has struck!</string>
    <string name="empty_farms">Add a new farm to get started!</string>
    <string name="empty_organizations">Add a new organization to get started!</string>
    <string name="empty_workflows">Add a new workflow to automate a manual task.</string>
    <string name="empty_conditions">Add a new condition to switch on/off based on sensor data</string>
    <string name="empty_schedule">Add a new schedule that specifies when to switch on/off</string>
    <string name="empty_edge_controller_list">Add a new edge device or cloud service to get started!</string>
    <string name="empty_products">Add a new product to get started!</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="title_activity_masters">Grow Spaces</string>
    <string name="title_activity_microcontrollers">Controllers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_eventlist">Event List</string>
    <string name="title_activity_websocket">WebSocket Notifications</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_new_edge_controller">New Connection</string>
    <string name="title_user_management">User Management</string>
    <string name="title_run">Run</string>
    <string name="title_rename">Rename</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_notify">Notify</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_condition">Condition</string>
    <string name="title_duration">Duration</string>
    <string name="title_debounce">Debounce</string>
    <string name="title_backoff">Backoff</string>
    <string name="title_history">History</string>
    <string name="title_algorithm">Algorithm</string>
    <string name="title_new_farm">New Crop</string>
    <string name="title_workflow">Workflow</string>
    <string name="title_run_workflow">Run Workflow</string>
    <string name="title_new_workflow">New Workflow</string>
    <string name="title_new_workflow_step">New Workflow Step</string>
    <string name="title_last_completed">Last Completed</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_role">Role Assignment</string>
    <string name="title_roles">Roles</string>
    <string name="action_creating_farm">Creating Farm...</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_add_controller">Create</string>
    <string name="action_add_controller_textview">Enter the IP or hostname of your edge device or cloud service provider.</string>
    <string name="action_logout">Logout</string>
    <string name="action_quit">Quit</string>
    <string name="action_quit_dialog">Are you sure? You will not receive anymore notifications.</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_video">Video</string>
    <string name="action_store">Store</string>
    <string name="action_run_workflow">Are you sure you want to start this workflow?</string>
    <string name="action_confirm_switch">Are you sure you want to switch </string>
    <string name="action_confirm_delete">"Are you sure you want to delete </string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="jwt_signing_public_key_asset">rsa.pub.der</string>
    <string name="number_picker_dispense_title">Timed Dose</string>
    <string name="number_picker_dispense_message">Choose number of seconds</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_hostname">Hostname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_value">Value</string>
    <string name="prompt_seconds">Seconds</string>
    <string name="hint_org_optional">Organization (Optional)</string>
    <string name="schedule_on">Start</string>
    <string name="schedule_off">Stop</string>
    <string name="schedule_frequency">Frequency</string>
    <string name="schedule_count">Count</string>
    <string name="schedule_timer">Timer</string>
    <string name="schedule_days">Days</string>
    <string name="date_years">years</string>
    <string name="date_year">year</string>
    <string name="date_months">months</string>
    <string name="date_month">month</string>
    <string name="date_weeks">weeks</string>
    <string name="date_week">week</string>
    <string name="date_days">days</string>
    <string name="date_day">day</string>
    <string name="time_hours">hours</string>
    <string name="time_hour">hour</string>
    <string name="time_minutes">minutes</string>
    <string name="time_minute">minute</string>
    <string name="time_seconds">seconds</string>
    <string name="time_second">second</string>
    <string name="dialog_message_rename_workflow">Enter the new workflow name</string>
    <string name="dialog_message_rename">Enter the new name</string>
    <string name="dialog_message_alarm">Enter the alarm low and high thresholds</string>
    <string name="dialog_message_schedule">Enter the schedule criteria</string>
    <string name="dialog_message_condition">Enter the condition criteria</string>
    <string name="dialog_message_duration">How long to stay on?</string>
    <string name="dialog_message_debounce">Short-cycle grace period (minutes)</string>
    <string name="dialog_message_backoff">How many minutes to wait before allowing again?</string>
    <string name="dialog_message_metric_value">Enter the new sensor value</string>
    <string name="dialog_message_algorithm">Select the algorithm</string>
    <string name="dialog_message_workflow">Enter the new workflow name</string>
    <string name="dialog_message_farm">Enter the new crop name</string>
    <string name="dialog_message_workflow_step">Enter the new workflow step configuration</string>
    <string name="dialog_message_reset_password">Enter the new password</string>
    <string name="dialog_message_roles">Choose the role you want assigned to %1$s.</string>
    <string name="general_header">General</string>
    <string name="room_header">Room</string>
    <string name="reservoir_header">Reservoir</string>
    <string name="doser_header">Doser</string>
    <string name="smtp_header">Mail Server</string>
    <string name="pref_enable">Enable</string>
    <string name="pref_notify">Notifications</string>
    <string name="pref_metrics">Metrics</string>
    <string name="pref_channels">Channels</string>
    <string name="pref_gallons">Gallons</string>
    <string name="pref_hardwareVersion">Hardware Version</string>
    <string name="pref_firmwareVersion">Firmware Version</string>
    <string name="interval_title">Interval</string>
    <string name="space_name_title">Name</string>
    <string name="timezone">Timezone</string>
    <string name="mode">Mode</string>
    <string name="pref_mode_virtual">Virtual</string>
    <string name="pref_mode_server">Server</string>
    <string name="pref_mode_cloud">Cloud</string>
    <string name="pref_mode_maintenance">Maintenance</string>
    <string name="pref_address">Address</string>
    <string name="smtp_host_title">Hostname</string>
    <string name="smtp_port_title">Port</string>
    <string name="smtp_user_title">Username</string>
    <string name="smtp_pass_title">Password</string>
    <string name="smtp_to_title">Recipient</string>
    <string name="video_feed_url">Video Feed URL</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync state periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Logged Out</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Connections</string>
    <string name="menu_store">Store</string>
    <string name="menu_community">Community</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_useraccounts">User Accounts</string>
    <string name="menu_farms">Farms</string>
    <string name="menu_organizations">Organizations</string>
    <string name="menu_workflows">Workflows</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_header_user_options">User Options</string>
    <string name="menu_header_schedule_options">Schedule Options</string>
    <string name="menu_header_condition_options">Condition Options</string>
    <string name="menu_header_metric_options">Metric Options</string>
    <string name="menu_header_switch_options">Switch Options</string>
    <string name="format_price">$%.2f</string>
    <string name="store_cancel_default_payment_method"><u>Cancel</u></string>
    <string name="store_save_default_payment_method"><u>Save</u></string>
    <string name="store_edit_shipping_address"><u>Edit</u></string>
    <string name="store_default_payment_option">Payment</string>
    <string name="store_shipping_address">Shipping Address</string>
    <string name="store_order_summary">Order Summary</string>
    <string name="store_shipping">Shipping:</string>
    <string name="store_subtotal">Subtotal:</string>
    <string name="store_tax">Tax:</string>
    <string name="store_total">Total:</string>
    <string name="store_empty_cart">Empty Cart</string>
    <string name="store_checkout">Checkout</string>
    <string name="store_checkout_quantity">Quantity:</string>
    <string name="store_payment">Payment</string>
    <string name="store_prompt_empty_cart">Are you sure you want to empty your cart?</string>
    <string name="store_billing_details">Billing Details</string>
    <string name="store_shipping_details">Shipping Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>