<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jeremyhahn.cropdroid.ui.edgecontroller.EdgeControllerListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_edge_controller_list">
    </fragment>

    <fragment
        android:id="@+id/nav_new_edge_controller"
        android:name="com.jeremyhahn.cropdroid.ui.edgecontroller.NewEdgeControllerFragment"
        android:label="@string/title_new_edge_controller"
        tools:layout="@layout/fragment_new_edge_controller">
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.jeremyhahn.cropdroid.ui.login.LoginFragment"
        android:label="@string/title_activity_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_microcontroller_tabs"
        android:name="com.jeremyhahn.cropdroid.ui.microcontroller.MicroControllerFragment"
        android:label="@string/title_activity_microcontrollers"
        tools:layout="@layout/fragment_microcontroller_tabs" >
    </fragment>

    <fragment
        android:id="@+id/nav_store"
        android:name="com.jeremyhahn.cropdroid.ui.iap.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/activity_store" />

    <fragment
        android:id="@+id/nav_microcontroller_settings"
        android:name="com.jeremyhahn.cropdroid.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
        android:id="@+id/nav_quit"
        android:name="com.jeremyhahn.cropdroid.QuitFragment"
        android:label="@string/menu_quit"
        tools:layout="@layout/fragment_quit" />

</navigation>